force-app/main/default/objects/Checklist__c/fields/Group_Letter__c.field-meta.xml
<CustomField>
    <fullName>Group_Letter__c</fullName>
    <description>The checklist group key: A through J plus H2. Mirrors Task_Group_Def__mdt.Letter__c exactly, which is the definition source and the join key for the fan-out, the migration mapping and every report grouping. Length 3 because H2 is two characters and one is held in reserve. Deliberately NOT required=true: the value is machine-written from the CMDT on every row, a platform-required flag protects against a human omission that cannot occur, and required=true would make the field non-permissionable and force it onto every page layout.</description>
    <inlineHelpText>Checklist group key from the definition, for example A, F or H2. System-populated; do not edit.</inlineHelpText>
    <label>Group Letter</label>
    <length>3</length>
    <type>Text</type>
</CustomField>