force-app/main/default/objects/Checklist__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>Human-readable name of the checklist group, mirroring Task_Group_Def__mdt.Group_Name__c. Denormalised onto the record on purpose so a report or list view can show the group name without a Custom Metadata join, which SOQL cannot do against a __mdt from a report.</description>
    <inlineHelpText>Name of this checklist group as it appears in the checklist UI. System-populated from the group definition.</inlineHelpText>
    <label>Group Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>