force-app/main/default/objects/Checklist__c/fields/Is_Conditional__c.field-meta.xml
<CustomField>
    <fullName>Is_Conditional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this group is only fanned out under a condition, mirroring Task_Group_Def__mdt.Conditional__c. Today the only conditional group is F, gated on Transaction__c.Loan_Required__c. Carried onto the record so the reconcile path can find conditional groups without re-reading the CMDT.</description>
    <inlineHelpText>Ticked when this group only appears on deals that meet a condition, such as the loan group on financed deals.</inlineHelpText>
    <label>Is Conditional</label>
    <type>Checkbox</type>
</CustomField>