force-app/main/default/objects/Checklist__c/fields/Items_Complete__c.field-meta.xml
<CustomField>
    <fullName>Items_Complete__c</fullName>
    <description>Count of items in this group whose Flag__c is Completed or Verified. Apex-maintained for the same reasons recorded on Items_Total__c. NOTE THE TWO-VALUE TEST: because Flag__c is the single lossy picklist the business chose, done means Completed OR Verified, and a rollup written against Completed alone silently undercounts every verified item.</description>
    <inlineHelpText>Number of items in this group already completed or verified. Recalculated automatically; do not edit.</inlineHelpText>
    <label>Items Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>