force-app/main/default/objects/Checklist__c/fields/Owner_Label__c.field-meta.xml
<CustomField>
    <fullName>Owner_Label__c</fullName>
    <description>The ROLE responsible for this group - Danish, CFO, Legal, FES, Accounting, Prop. Mgmt. - mirroring Task_Group_Def__mdt.Owner_Label__c. THIS IS NOT A USER AND NOT A RECORD OWNER. A master-detail child has no OwnerId at all, and the value here has always been a role string in this model. Naming follows the _Label__c type-suffix discipline for Text carrying a human label. Never pair this with a completion date and render it as completed by role - that is a lie the current model already carries warnings about.</description>
    <inlineHelpText>The role accountable for this group of items, for example CFO or Legal. It is a label, not a Salesforce user.</inlineHelpText>
    <label>Owner Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>