force-app/main/default/objects/Checklist__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Display order of this group within the deal, mirroring Task_Group_Def__mdt.Sequence__c. PARITY FIELD: without it the group ordering the current checklist UI relies on is lost, because Group_Letter__c sorts H2 between H and I only by accident and A10 style keys would not sort at all.</description>
    <inlineHelpText>Order this group appears in the checklist. System-populated from the group definition.</inlineHelpText>
    <label>Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>