force-app/main/default/objects/Checklist__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>The deal phase this checklist group belongs to. The four values are BYTE-IDENTICAL to the first four values of Transaction__c.Stage__c, including the hyphen in Post-Closing - not the Closing and Post Closing spellings the LWC and the FlexiPage tabs currently use. Anything else makes a cross-object report join impossible. Closed is deliberately absent: no task group belongs to the terminal stage. NO DEFAULT VALUE, deliberately - a plausible default would hide a fan-out that failed to stamp the phase, whereas a blank is visible.</description>
    <inlineHelpText>Deal phase this group belongs to. Stamped when the checklist is created from the group definition.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Contract</fullName>
            </value>
            <value>
                <fullName>Due Diligence</fullName>
            </value>
            <value>
                <fullName>Closing Prep</fullName>
            </value>
            <value>
                <fullName>Post-Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>